--- a/ch01/index.html
+++ b/ch01/index.html
@@ -72,11 +72,13 @@
         }
     }
 
+    /*
     const ca1 = new CA1Rule90("00000000000000000000100000000000000000000")
     for (let i = 0; i <= 20; i++) {
         addResult(ca1)
         ca1.next()
     }
+    */
 
     // 練習問題用
     window.CA1 = CA1
@@ -87,6 +89,18 @@
             cell.classList.add("cell", ca.states[i] === 0 ? "dead" : "live")
             result.appendChild(cell)
         }
+    }
+    const ca1 = new CA1({
+        rule: 30,
+        states: [
+            0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+            1,
+            0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
+        ]
+    })
+    for (let i = 0; i <= 20; i++) {
+        window.addResult(ca1)
+        ca1.next()
     }
 </script>
 </body>
